# libtaior

./: .gitignore  .npmrc  Cargo.toml  README.md  TAIOR_SPEC_COMPLIANCE.md  build-wasm-aorp.sh  build-wasm.sh
.cargo/: config.toml
.github/workflows/: publish-taior.yml
demos/: Cargo.toml  README.md
demos/src/: main.rs
docs/: OVERVIEW.md  PAPER.md
examples/: basic_usage.rs  identity_demo.rs  quic_client.rs  quic_server.rs  relay_server.rs  transport_demo.rs
src/: api.rs  circuit.rs  cover.rs  cover_traffic.rs  discovery.rs  identity.rs  lib.rs  modes.rs  packet.rs  routing.rs  wasm.rs
src/transport/: mod.rs  nat.rs  quic.rs  relay.rs
