[package]
name = "taior"
version = "0.1.0"
edition = "2021"
authors = ["Taior Project <dev@taiorproject.org>"]
description = "Taior: The Amnesic Incognito Oblivious Routing - Embeddable anonymous routing library"
license = "AGPL-3.0-or-later"
repository = "https://github.com/taiorproject/libtaior"

[lib]
name = "taior"
crate-type = ["rlib", "cdylib"]

[dependencies]
aorp = { git = "https://github.com/taiorproject/aorp-core", branch = "main" }
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
thiserror = "1.0"
rand = "0.8"
js-sys = { version = "0.3", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
bytes = "1.5"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["fast-mode", "mix-mode"]
fast-mode = []
mix-mode = []
adaptive-mode = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "console_error_panic_hook", "js-sys"]
