[package]
name = "libtaior-demo"
version = "0.0.1"
edition = "2021"
authors = ["Taior Project <dev@taiorproject.org>"]
description = "Demo experimental de enrutamiento AORP para Taior"

[[bin]]
name = "simple_route"
path = "src/main.rs"

[dependencies]
aorp = { git = "https://github.com/taiorproject/aorp-core", branch = "main" }
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
hkdf = "0.12"
rand_core = "0.6"
sha2 = "0.10"
x25519-dalek = { version = "2", default-features = false, features = ["u64_backend"] }
hex = "0.4"
